syntax = "proto3";

package consensus;

enum MessageType {
  UNKNOWN = 0;
  ANNOUNCE = 1;
  COMMIT = 2;
  CHALLENGE = 3;
  RESPONSE = 4;
  COLLECTIVE_SIG = 5;
  FINAL_COMMIT = 6;
  FINAL_CHALLENGE = 7;
  FINAL_RESPONSE = 8;
}

message Message {
  MessageType type = 1;
  uint32 consensus_id = 2;
  uint32 sender_id = 3; // TODO: make it public key
  bytes block_hash = 4;
  bytes payload = 5;
  bytes signature = 6;
}
